# AI_learning

./: .cursorignore  .gitignore  ai_learn.ipynb  pyproject.toml  requirements.txt  start.sh
.cursor/: mcp.json
.cursor/commands/: coding_agent_template.md
.cursor/rules/: general.mdc  optimization.mdc  python.mdc  python_rules.mdc
Tasks/: Agent_task.md
Tasks/src/: .gitlab-ci.yml
Tasks/src/code_databricks/: requirements.txt
Tasks/src/code_databricks/tests/: test_sanity.py
app/: .dockerignore  Dockerfile  app_requirements.txt  download_model.py  main.py  main.py_old  mcp_server.py  requirements.txt
app/mcp-client/: mcp_client.py
app/mcp-server/: mcp_server.py
app/server/: main.py  revolut_mcp_server.py
scripts/: QLoRA_fine_tune.py  ai_learn.ipynb  bitsandbytes.py  embeddings.py  huggingface_play.py  sigmoid_plot.py  vLLM.py
