[project]
name = "AI_learning"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
dependencies = [
    "accelerate>=1.11.0",
    "datasets>=4.4.0",
    "dotenv>=0.9.9",
    "fastapi>=0.121.2",
    "hf-xet>=1.2.0",
    "huggingface-hub>=0.36.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "peft>=0.17.1",
    "pydantic>=2.12.4",
    "sentence-transformers>=5.1.2",
    "transformers>=4.51.3",
    "uvicorn>=0.38.0",
]
