[project]
name = "AI_learning"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.1",
    "dotenv>=0.9.9",
    "hf-xet>=1.2.0",
    "huggingface-hub>=0.36.0",
    "matplotlib>=3.10.7",
    "peft>=0.18.0",
    "sentence-transformers>=5.1.2",
]
