[project]
name = "AI_learning"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.1",
    "dotenv>=0.9.9",
    "fastapi>=0.123.0",
    "hf-xet>=1.2.0",
    "httpx>=0.28.1",
    "huggingface-hub>=0.36.0",
    "matplotlib>=3.10.7",
    "mcp>=1.23.3",
    "peft>=0.18.0",
    "sentence-transformers>=5.1.2",
    "uvicorn>=0.38.0",
]
